--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Config.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Config.cshtml
@@ -5,106 +5,152 @@
     Layout = "~/Views/Shared/_LayoutWithBar.cshtml";
 }
 
-<h2>Config</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Utilizadores</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.username)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.pontos, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.pontos, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.pontos, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.imagemVis, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.imagemVis, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.imagemVis, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.audioVis, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.audioVis, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.audioVis, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.videoVis, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.videoVis, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.videoVis, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.videoAprovado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.videoAprovado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.videoAprovado, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.audioAprovado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.audioAprovado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.audioAprovado, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.imagemAprovado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.imagemAprovado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.imagemAprovado, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.avatar, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.avatar, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.tema_Ambiente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.tema_Ambiente, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tema_Ambiente, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="container text-center">
+    <h2>Configuração</h2>
 </div>
+<div class="container">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            <h4>Dados Gerais de @Model.username</h4>
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.username)
+            
+            <div class="form-group">
+                <hr />
+                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
+                
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <hr />
+                <div class="container">
+                    <h4>Podes Alterar Aqui o Teu Tutor!</h4>
+                    @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label hidden" })
+
+                </div>
+                <hr />
+                <div class="container text-center">
+                    <div class="radioButtonGroup">
+                        <label for="dafh" class="labelAvatar">
+                            <img src="~/Assets/sprites/dafh/Afonso_1.png">
+                        </label>
+                        @Html.RadioButtonFor(model => model.avatar, "D. Afonso Henriques", htmlAttributes: new { @id = "dafh", @name = "dafh"})
+                        <label for=" dafh" class="labelAmb">
+                            D. Afonso Henriques
+                        </label>
+                    </div>
+                    <div class="radioButtonGroup">
+                        <label for="ldc" class="labelAvatar">
+                            <img src="~/Assets/sprites/ldc/camoes_1.png">
+                        </label>
+                        @Html.RadioButtonFor(model => model.avatar, "Luis de Camoes", htmlAttributes: new { @id = "ldc", @name = "ldc" })
+                        <label for="ldc" class="labelAmb">
+                            Luís de Camões
+                        </label>
+                    </div>
+                </div>
+            </div>
+            
+
+            <div class="form-group">
+                <hr />
+                <div class="container">
+                    <h4>Escolhe aqui o fundo de ecrã que mais gostas!</h4>
+                    @Html.LabelFor(model => model.tema_Ambiente, htmlAttributes: new { @class = "control-label hidden" })
+                </div>
+                <hr />
+                <div class="container text-center">
+                    <div class="radioButtonGroup">
+                        <label for="guimaraes" class="labelAmb">
+                            <img src="~/Assets/Backgrounds_ops/gmr.jpg" height="130" width="193" class="label-default">
+                        </label>
+                        @Html.RadioButtonFor(model => model.tema_Ambiente, "Guimaraes", new { @id = "guimaraes", @name = "guimaraes", @checked = "checked" })
+                        <label for="guimaraes" class="labelAmb">
+                            Guimarães
+                        </label>
+                    </div>
+                    <div class="radioButtonGroup">
+                        <label for="25deabril" class="labelAmb">
+                            <img src="~/Assets/Backgrounds_ops/25ABR74.jpg" height="130" width="193" class="drinkcard-cc">
+                        </label>
+                        @Html.RadioButtonFor(model => model.tema_Ambiente, "25 de Abril", new { @id = "25deabril", @name = "25deabril" })
+                        <label for="25deabril" class="labelAmb">
+                            25 de Abril
+                        </label>
+                    </div>
+                    <div class="radioButtonGroup">
+                        <label for="descobrimentos" class="labelAmb">
+                            <img src="~/Assets/Backgrounds_ops/descobrimentos.jpg" height="130" width="193" class="drinkcard-cc">
+                        </label>
+                        @Html.RadioButtonFor(model => model.tema_Ambiente, "Descobrimentos", new { @id = "descobrimentos", @name = "descobrimentos" })
+                        <label for="descobrimentos" class="labelAmb">
+                            Descobrimentos
+                        </label>
+                    </div>
+
+                </div>
+                <hr />
+            </div>
+            
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <div class="btn btn-default">
+                        @Html.ActionLink("Voltar", "Index")
+                    </div>
+                    <input type="submit" value="Guardar" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    
+</div>
+
+<hr />
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+
+<style>
+    .radioButtonAvatar {
+        display: inline-block;
+    }
+
+    .radioButtonGroup {
+        display: inline-block;
+        text-align: center;
+    }
+
+        .radioButtonGroup label {
+            display: block;
+        }
+
+            .radioButtonGroup label img {
+                border: 2px solid black;
+            }
+
+        .radioButtonGroup .labelAvatar img {
+            width: 45%;
+            height: 45%;
+        }
+
+    .hidden {
+        display: none;
+    }
+
+    body {
+        background-repeat:no-repeat;
+        background : fixed;
+    }
+</style>
