--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -32,6 +32,17 @@
 
 
 
+        
+        <div class="container col-xs-2">
+            <audio controls>
+                <source src="@Url.Action("PlayVideo",new {url = "~/"+Model.Multimedia.ElementAt(0).PATH})" type="audio/wav">
+            </audio>
+        </div>
+        <div class="conatainer col-xs-4">
+           
+                @Html.Action("getAudioText", new { Path =Model.Multimedia.ElementAt(0).texto })
+            
+        </div>
     }
 
 
@@ -122,7 +133,7 @@
         </div>
     }
 
-</div>
+</d>
 
 
 
