--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Config.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Config.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container text-center">
-    <h2>Configuração</h2>
+    <h1 style="text-align:center;color:#280000 ;font-family:'Comic Sans MS'">Configuração</h1>
 </div>
 <div class="container">
     @using (Html.BeginForm())
