--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Login.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h3 class="text-primary col-md-offset-2">Olá Bem-vindo de volta</h3>
+    <h3 class="text-primary col-md-offset-2" style="color:#280000 ;font-family:'Comic Sans MS'">Olá Bem-vindo de volta</h3>
 
 
     @using (Html.BeginForm()) 
