--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/_ConsultarRanking.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/_ConsultarRanking.cshtml
@@ -2,15 +2,16 @@
 
     @{
     ViewBag.Title = "_ConsultarRanking";
+    Layout = "~/Views/Shared/_LayoutWithBar.cshtml";
     int i = 1;
     }
 
 <div style="text-align:center">
-    <h1>Ranking Nacional</h1>
+    <h1 style="text-align:center;color:#280000 ;font-family:'Comic Sans MS'">Ranking Nacional</h1>
 
     <br>
 
-    <table align="center" style="width:30%;text-align:left">
+    <table align="center" style="width:35%;text-align:left;font-size:x-large">
         <tr>
             <th>Posição</th>
             <th>Utilizador</th>
