--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
@@ -69,6 +69,13 @@
     };
 </script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+
+
+
+
+
+
 <div id="tutor-container">
     <div class="opts">
         <div id="effect">
@@ -95,6 +102,9 @@
                     <div onclick="help('Apresentação','ap1','/Assets/intros/dafh/intro3.wav')">Apresentação</div>
                     <audio id="ap1" onended="onEnd()" hidden></audio>
                 </li>
+                <li>
+                    <div id="tutorial">Como jogar?</div>
+                </li>
             </ul>
             </div>
         </div>
@@ -110,6 +120,8 @@
     </div>
     
     
+    
+
 </div>
 
 <style>
@@ -131,4 +143,9 @@
              width:50px;
              height:50px;
         }
+
+
+
 </style>
+
+
