--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -6,7 +6,22 @@
 
 @if (Session["userID"] != null)
 {
+    <div id="boxes" class="text-center">
+        <!-- #customize your modal window here -->
+        <div id="dialog" class="window text-center">
+            <!-- close button is defined as close class -->
+            <div class="container text-center" >
+                <a href="#" class="close">X</a>
+                <video controls autoplay>
+                    <source src="~/Assets/help/videoRegistar.webm" type="video/webm" />
+                </video>
+            </div>
+        </div>
 
+        <!-- Do not remove div#mask, because you'll need it to fill the whole screen -->
+        <div id="mask"></div>
+    </div>
+    
     <div class="containerCards sidebar" style="background-color:transparent">
         <div class="card " style="background-color:transparent">
             @Html.Action("_ListEtapas", "Home", "Home/_ListEtapas")
@@ -61,3 +76,83 @@ else
             </div>
         </div>
 }
+
+
+
+<style>
+    #mask {
+       
+        position: absolute;
+        z-index: 9000;
+        background-color: #000;
+        display: none;
+        vertical-align: central;
+    }
+
+    #boxes .window {
+        position: fixed;
+        width: 50%;
+        height: 50%;
+        display: none;
+        z-index: 9999;
+        padding: 20px;
+        vertical-align: central;
+    }
+    /* Customize your modal window here, you can add background image too */
+    #boxes #dialog {
+        margin: auto;
+        width : 75%;
+        height : 75%;
+        vertical-align:central;
+    }
+</style>
+
+<script>
+    $(document).ready(function () {
+        //select all the a tag with name equal to modal
+        $('#tutorial').click(function (e) {
+            //Cancel the link behavior
+            e.preventDefault();
+            //Get the A tag
+            var id = $("#dialog");
+
+            //Get the screen height and width
+            var maskHeight = $(document).height();
+            var maskWidth = $(window).width();
+
+            //Set height and width to mask to fill up the whole screen
+            $('#mask').css({ 'width': maskWidth, 'height': maskHeight });
+
+            //transition effect
+            $('#mask').fadeIn(1000);
+            $('#mask').fadeTo("slow", 0.8);
+
+            //Get the window height and width
+            var winH = $(window).height();
+            var winW = $(window).width();
+
+            //Set the popup window to center
+          //$(id).css('top', winH / 2 - $(id).height() / 2);
+            //$(id).css('left', winW / 2 - $(id).width() / 2);
+
+            //transition effect
+            $(id).fadeIn(2000);
+
+        });
+
+        //if close button is clicked
+        $('.window .close').click(function (e) {
+            //Cancel the link behavior
+            e.preventDefault();
+            $('#mask, .window').hide();
+        });
+
+        //if mask is clicked
+        $('#mask').click(function () {
+            $(this).hide();
+            $('.window').hide();
+        });
+
+    });
+</script>
+
