--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -6,14 +6,11 @@
 <div id="Apresentacao" style="text-align:center">
 
     <div id="avButton" style="align-content:center">
-        @Html.ActionLink("Avaliação", "avaliar", "Avaliacao", new { username = Session["userID"], codAula = Session["aulaId"], codApr = Model.cod, tipo = Model.tipo }, new { @class = "btn btn-default text-primary", @id = "avaliacaoButton", style = "display:none" })
+        @Html.ActionLink("Iniciar a Avaliação", "avaliar", "Avaliacao", new { username = Session["userID"], codAula = Session["aulaId"], codApr = Model.cod, tipo = Model.tipo }, new { @class = "btn btn-default text-primary", @id = "avaliacaoButton", style = "display:none" })
     </div>
 
     @if (Model.tipo == "video")
 
-    ////HELP https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Using_HTML5_audio_and_video
-
-    //Problema: o video nao dá para reproduzir novamente! -> Base de dados???
     {
         <video id="videoAula" controls>
             <source src="@Url.Action("PlayVideo",new {url = "~/"+Model.Multimedia.ElementAt(0).PATH})" type="video/mp4">
@@ -22,8 +19,6 @@
             <source src="@Url.Action("PlayVideo",new {url = "~/"+Model.Multimedia.ElementAt(0).PATH})" type="video/3gpp">
             <source src="@Url.Action("PlayVideo",new {url = "~/"+Model.Multimedia.ElementAt(0).PATH})" type="video/webm">
         </video>
-
-
     }
 
 
@@ -131,10 +126,16 @@
         </div>
     }
 
-</d>
+</div>
 
 
 
+<style>
+    .btn {
+        background-color:transparent;
+        margin:2%;
+    }
+    </style>
 
 
 
