--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model NomesdaHistoriaApp.Models.Aulas.AulaViewModel
 
-@if (Model != null) { 
-    
+@if (Model != null)
+{
+
 
     ViewBag.Title = Model.titulo;
 
-<h2 style="text-align:center">
-   @Model.titulo
-</h2>
+    <h2 style="text-align:center;color:#280000 ;font-family:Georgia, 'Times New Roman', Times, serif">
+        @Model.titulo
+    </h2>
 
 
         <div class="media">
