--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/_LoadMedia.cshtml
@@ -128,20 +128,6 @@
 
 </div>
 
-
-
-<style>
-    .btn {
-        background-color:transparent;
-        margin:2%;
-    }
-    </style>
-
-
-
-
-
-
 <script>
     var flag = false;
     var $myCarousel = $('#myCarousel');
@@ -193,10 +179,14 @@
 </script>
 
 
-
 <style>
-    /*.carousel-inner > .item > img {
-                }*/
+
+    .btn {
+        background-color: aliceblue;
+        font-size: large;
+        color: black;
+        margin:2%;
+    }
 
     .carousel {
         align-content: center;
