--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Index.cshtml
@@ -46,9 +46,9 @@ else
             <div class="content">
                 <div class="container text-center">
 
-                    <h1 class="text-primary text-center" style="text-align:center;color:#280000 ;font-family:'Comic Sans MS'">Olá, Bem Vindo aos Nome da História</h1>
+                    <h1 class="text-primary text-center" style="text-align:center;color:#280000 ;font-family:Georgia, 'Times New Roman', Times, serif">Olá, Bem Vindo aos Nome da História</h1>
 
-                    <p>introduçao a cenas ficava fixed!</p>
+                    <h4>Vem aprender a História de Portugal de uma forma diferente!</h4>
 
 
                     <div class="container text-center">
