--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Register.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/Register.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container text-center">
-    <h2>Olá Bem-vindo, junta te a nós!</h2>
+    <h1 style="font-family:Georgia, 'Times New Roman', Times, serif">Olá Bem-vindo, junta te a nós!</h1>
 </div>
 <div class="container">
 @using (Html.BeginForm()) 
