--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/_ConsultarRanking.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Home/_ConsultarRanking.cshtml
@@ -7,7 +7,7 @@
     }
 
 <div style="text-align:center">
-    <h1 style="text-align:center;color:#280000 ;font-family:'Comic Sans MS'">Ranking Nacional</h1>
+    <h1 style="text-align:center;color:#280000 ;font-family:Georgia, 'Times New Roman', Times, serif">Ranking Nacional</h1>
 
     <br>
 
